[package]
name = "ccm"
version = "0.1.0"
edition = "2021"
description = "Claude Code session manager - TUI for browsing, searching, and managing Claude Code sessions"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
thiserror = "2"
unicode-width = "0.2"

[profile.release]
opt-level = 3
lto = true
strip = true
